# rov-monitor

./: LICENSE  README.md
monitor-client/: CMakeLists.txt  package.xml
monitor-client/scripts/: monitor-client.py
monitor-server/: CMakeLists.txt  package.xml
monitor-server/scripts/: monitor-server.py
monitor_msgs/: CMakeLists.txt  package.xml
monitor_msgs/msg/: DeviceList.msg  DeviceStatus.msg
